# somos-datum

./: .gitignore  .scalafmt.conf  Anchor.toml  README.md  build.sbt  build.sh  elm.json  package-lock.json  package.json  publish.sh
app/: package-lock.json  package.json  sync-in.sh
app/public/: custom.css  index.html
app/src/: App.js  config.js  idl.json  init.jsx  primary.js  update.jsx
assets/: index.html  package-lock.json  package.json  sync-idl.sh
assets/js/: getAccountInfo.json  getRecentBlockHash.json  main.js  package-lock.json  package.json  phantom.js  rollup.config.js  sendTransaction.json  sync-idl.sh
assets/js/anchor/: config.js  download.js  escrow.js  idl.json  init.js  main.js  sign.js  state.js  upload.js  util.js  wallet.ts
assets/js/lit/: decrypt.js  encrypt.js  util.js
assets/js/phantom/: index.js  main.js
assets/js/shdw/: index.js
assets/sass/: animations.scss  custom.scss  package-lock.json  package.json
css/: custom.scss  package.json
deployment/: api_gateway.tf  iam.tf  lambda.tf  main.tf  providers.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
download/: package-lock.json  package.json  rollup.config.js  sync-idl.sh  zip.sh
elm/src/: Main.elm
programs/somos-datum/: Cargo.toml
programs/somos-datum/src/: lib.rs
programs/somos-solana/: Cargo.toml
project/: plugins.sbt
tests/: main.js  main.ts  purchase.js  somos-solana.js  util.js  util.ts
web/: index.html
web/js/: main.js  package-lock.json  rollup.config.js  sync-idl.sh
web/sass/: animations.scss  custom.scss  package.json
(+107 files in other folders)
