[package]
name = "somos-datum"
version = "1.1.0"
description = "Token-gated decentralized data for the solana community."
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "somos_datum"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
borsh = { version = "0.9.3", features = ["const-generics"] }
